<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="50dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cod" />

    <EditText
        android:id="@+id/etCod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/informe_o_codigo"
        android:importantForAutofill="no"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="nome"
        android:hint="@string/informe_o_nome"
        android:inputType="textCapWords" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone" />

    <EditText
        android:id="@+id/etTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:hint="@string/informe_o_telefone"
        android:inputType="number" />


    <Button
        android:id="@+id/btIncluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incluir"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/btAlterar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alterar"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/btExcluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/excluir"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/btPesquisar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pesquisar"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/btListar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listar"
        tools:ignore="OnClick" />

</LinearLayout>



